--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </header>
             <section class="section_one">
                 <div class="Photography">
-                    <div class="container">
+                    <div class="containerlп">
                         <div class="Photography-title">
                             Recently in our <br> Photography
                             <div class="separately_text"><br>Blog</div><br>.
@@ -125,15 +125,53 @@
                 </div>
             </section>
             <section class="section_two_wrapper">
-                <div class="container">
-                    <div class="section_two">
-                        
-                        <div class="two_text_wrapper">
-                            <div class="two_title">
-                                Photographers Who Changed the World forever
+                <div class="containerl">
+                    <div class="section_wrapper">
+                        <div class="section_two">
+                            <div class="two_text_wrapper">
+                                <div class="two_title">
+                                    Photographers Who <br> Changed the World <br> forever
+                                </div>
+                                <div class="two_text">
+                                    Debitis ea dicta ea eum laboriosam quis dolore <br> repudiandae. Est hic quod et
+                                    similique ullam et. <br> Ipsum ipsam temporibus quo ea natus enim quae <br> officia
+                                    nulla.
+                                </div>
+                                <div class="two_img">
+                                    <img class="two_ava" src="img/IMAGE (5).png" alt="">
+                                    <div class="two_text_">
+                                        <div class="two_nic-name">Robert Brown</div>
+                                        <div class="two_info">
+                                            on September 13, 2019
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="two_text">
-                                Debitis ea dicta ea eum laboriosam quis dolore <br> repudiandae. Est hic quod et similique ullam et. <br> Ipsum ipsam temporibus quo ea natus enim quae <br> officia nulla.
+                        </div>
+                        <div class="section_three">
+                            <div class="catd_img_wrapper">
+                                <img src="img/rasim1.png" alt="" class="card_img_one">
+                            </div>
+                            <div class="card_img_two">
+                                <div class="card_text_warpper">
+                                    <div class="card_text_info">
+                                        Sep 13, 2019
+                                    </div>
+                                    <div class="card_text_infomation">
+                                        7 Things About <br> Photography Your Boss <br> Wants To Know
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card_img_three">
+                                <div class="card_img_three_title">
+                                    Visit Full Blog
+                                </div>
+                                <div class="card_img_three_text">
+                                    Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.
+                                </div>
+                                <div class="card_img_three_footer">
+                                    Visit Blog
+                                </div>
                             </div>
                         </div>
                     </div>
