--- a/index.html
+++ b/index.html
@@ -174,6 +174,31 @@
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="section_four_wrapper">
+                    <div class="section_four">
+                        <div class="four_title_wrapper">
+                            <div class="four_title">
+                                Inspired to get <br> your photography <br>to the next level?
+                            </div>
+                            <div class="four_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Suspendisse varius
+                                enim in
+                                eros
+                                elementum tristique.
+                            </div>
+                            <button class="four_button">
+                                <img class="four_button_img" src="img/Group.png" alt="">
+                                <div class="four_button_title">
+                                    Resource Center <br>
+                                    Packed with useful tips & tutorials
+                                </div>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </section>
